k8s/nextcloud/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-deploy
  namespace: nextcloud
  annotations:
    description: lorem ipsum dolor.
  labels:
    app: nextcloud-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextcloud-app
  template:
    metadata:
      namespace: nextcloud
      labels:
        app: nextcloud-app
    spec:
      securityContext:
        runAsUser: 1000
      containers:
        - name: nextcloud-app
          image: nextcloud:28
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          ports:
            - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-svc
  namespace: nextcloud
spec:
  selector:
    app: nextcloud-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  labels:
    name: nextcloud-ingress
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
    - host: nextcloud.local.victor3spoir.com
      http:
        paths:
          - path: /
            pathType: Prefix #ImplementationSpecific
            backend:
              service:
                name: nextcloud-svc
                port:
                  number: 80
